--- a/2_yolov4/c_yolov4_head_keras.ipynb
+++ b/2_yolov4/c_yolov4_head_keras.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "signal-theta",
+   "id": "voluntary-imperial",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "smooth-criticism",
+   "id": "cleared-legend",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "steady-directive",
+   "id": "fabulous-center",
    "metadata": {},
    "source": [
     "**先验框**\n",
@@ -89,82 +89,94 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "limiting-paintball",
+   "id": "convertible-minority",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def yolo_decode(prediction, anchors, num_classes, input_dims, scale_x_y=None, use_softmax=False):\n",
+    "def yolo_decode(feats, anchors, num_classes, input_dims, scale_x_y=None, use_softmax=False):\n",
     "    \"\"\"Decode final layer features to bounding box parameters\n",
     "    \n",
     "    Args:\n",
-    "        prediction: feature layers([batch_size, grid_size, grid_size, num_anchors*(num_classes+5)])\n",
+    "        feats: feature layers([batch_size, grid_size, grid_size, num_anchors*(num_classes+5)])\n",
     "    \"\"\"\n",
     "    num_anchors = len(anchors)\n",
-    "    batch_size = np.shape(prediction)[0]\n",
-    "    grid_size = np.shaoe(prediction)[1:3]\n",
-    "    # check if stride on height & width are same\n",
-    "    assert input_dims[0]//grid_size[0] == input_dims[1] // grid_size[1], 'model stride mismatch'\n",
-    "    stride = input_dims[0] // grid_size[0]\n",
+    "    feats_shape = tf.shape(feats)\n",
+    "    batch_size  = feats_shape[0]\n",
+    "    grid_size   = feats_shape[1]\n",
     "    \n",
-    "    prediction = np.reshape(prediction,\n",
-    "                           (batch_size, grid_size[0]*grid_size[1]*num_anchors, num_classes+5))\n",
-    "    \n",
-    "    # ----------------------------------------------------------------------------------------------------------\n",
-    "    # generate x_y_offset grid map\n",
-    "    grid_y = np.arange(grid_size[0])\n",
-    "    grid_x = np.arange(grid_size[1])\n",
-    "    x_offset, y_offset = np.meshgrid(grid_x, grid_y)\n",
-    "    \n",
-    "    x_offset = np.reshape(x_offset, (-1, 1))\n",
-    "    y_offset = np.reshape(y_offset, (-1, 1))\n",
-    "    \n",
-    "    x_y_offset = np.concatenate((x_offset, y_offset), axis=1)\n",
-    "    x_y_offset = np.tile(x_y_offset, (1, num_anchors)) # 扩充至三倍\n",
-    "    x_y_offset = np.reshape(x_y_offset, (-1, 2))  # 整形成行数增加\n",
-    "    x_y_offset = np.expand_dims(x_y_offset, 0)\n",
+    "    feats =tf.reshape(feats,\n",
+    "                      (batch_size, grid_size, grid_size, num_anchors, num_classes+5))\n",
+    "    raw_dxdy = feats[:, :, :, :, 0:2]\n",
+    "    raw_dwdh = feats[:, :, :, :, 2:4]\n",
+    "    raw_conf = feats[:, :, :, :, 4:5]\n",
+    "    raw_prob = feats[:, :, :, :, 5: ]\n",
     "    \n",
     "    # ----------------------------------------------------------------------------------------------------------\n",
-    "    anchors = np.tile(anchors, (grid_size[0] * grid_size[1], 1))\n",
-    "    anchors = np.expand_dims(anchors, 0)\n",
-    "    \n",
-    "    # 检测框解码\n",
+    "    # 生成 grid 网格基准\n",
+    "    grid_size_f = tf.cast(grid_size, tf.float32)\n",
+    "    rows = tf.range(grid_size_f, dtype=tf.float32)\n",
+    "    cols = tf.range(grid_size_f, dtype=tf.float32)\n",
+    "    rows = tf.tile(rows[tf.newaxis, tf.newaxis, :, tf.newaxis, tf.newaxis], [1, grid_size, 1, 1, 1])\n",
+    "    cols = tf.tile(cols[tf.newaxis, :, tf.newaxis, tf.newaxis, tf.newaxis], [1, 1, grid_size, 1, 1])\n",
+    "    offset = tf.concat([rows, cols], -1)\n",
+    "    offset = tf.tile(offset, [batch_size, 1, 1, num_anchors, 1]) # ==> [batch_size, grid_size, grid_size, num_anchors, 2]\n",
+    "\n",
+    "    # ----------------------------------------------------------------------------------------------------------\n",
+    "    # 检测框解码，此阶段的x,y都是基于grid的，例如grid为 19*19，(x, y)可能为(5.645,8.975)，即未修正的\n",
     "    if scale_x_y:\n",
     "        # Eliminate grid sensitivity trick involved in YOLOv4\n",
     "        # https://zhuanlan.zhihu.com/p/139724869\n",
-    "        box_xy_tmp = expit(prediction[..., :2]) * scale_x_y - (scale_x_y - 1) / 2\n",
-    "        box_xy = (box_xy_tmp + x_y_offset) / np.arange(grid_size)[::-1]\n",
+    "        pred_xy = (scale_x_y * tf.sigmoid(conv_raw_dxdy) - (scale_x_y - 1.0) * 0.5 ) * stride + offset \n",
     "    else:\n",
-    "        box_xy = (expit(prediction[..., :2]) + x_y_offset) / np.array(grid_size)[::-1]\n",
-    "    box_wh = (np.exp(prediction[..., 2:4]) * anchors) / np.array(input_dims)[::-1]\n",
-    "    \n",
+    "        pred_xy = tf.sigmoid(conv_raw_dxdy) + offset \n",
+    "    _anchors = tf.Variable(anchors)\n",
+    "    pred_wh = (tf.exp(raw_dwdh) * _anchors)\n",
+    "   \n",
     "    # ----------------------------------------------------------------------------------------------------------\n",
     "    # sigmoid objectness scores 置信度解码\n",
-    "    objectness = expit(prediction[..., 4])  # p_o (objectness score)\n",
-    "    objectness = np.expand_dims(objectness, -1)  # To make the same number of values for axis 0 and 1\n",
+    "    objectness = tf.sigmoid(raw_conf)  # p_o (objectness score)\n",
     "    \n",
     "    # ----------------------------------------------------------------------------------------------------------\n",
     "    # class scores 类别解码\n",
-    "    if use_softmax:\n",
-    "        class_scores = softmax(prediction[..., 5:], axis=-1)\n",
-    "    else:\n",
-    "        class_scores = explit(prediction[..., 5:])\n",
+    "    class_probs = tf.sigmoid(raw_prob)\n",
     "    \n",
-    "    # (batch_size, grid_size[0]*grid_size[1]*num_anchors, ...))\n",
-    "    return np.concatenate([box_xy, box_wh, objectness, class_scores], axis=2)"
+    "    # ----------------------------------------------------------------------------------------------------------\n",
+    "    # 进一步处理\n",
+    "    # 左上角xy + 右下角xy\n",
+    "    #pred_xyxy = tf.concat([pred_xy - pred_wh / 2, pred_xy + pred_wh / 2], -1)   \n",
+    "    #class_scores = objectness * class_probs\n",
+    "    #xyxy_scores = tf.concat([pred_xyxy, class_scores], axis=-1)\n",
+    "    \n",
+    "    #return tf.reshape(xyxy_scores, (batch_size, grid_size*grid_size*num_anchors, num_classes+4)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "coral-glucose",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def yolo_corrected_boxes(box_xy, box_wh, input_shape, image_shape):\n",
+    "    \"\"\"计算出预测框相对于原图像的位置和大小\"\"\"\n",
+    "    input_shape = K.cast(input_shape, K.dtype(box_xy))\n",
+    "    image_shape = K.cast(image_shape, K.dtype(box_xy))\n",
+    "    \n",
+    "    # reshape the image_shape tensor to align with boxes dimension\n",
+    "    image_shape = K.reshape(image_shape, [-1, 1, 1, 1, 2])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "pressing-eleven",
+   "id": "sensitive-philosophy",
    "metadata": {},
    "outputs": [],
    "source": [
     "def yolo_handle_predictions(predictions, image_shape, max_boxes=100, confidence=0.1, iou_threshold=0.4, use_cluster_nms=False, use_wbf=False):\n",
     "    # 假设predictions尺寸为 [16, 16*16*3, 85] = [16, 768, 85]\n",
-    "    boxes = predictions[:, :, :4]  # [16, 768, 4]\n",
-    "    box_confidences = np.expand_dims(predictions[:, :, 4], -1)  # [16, 768, 1]\n",
-    "    box_class_probs = predictions[:, :, 5:]  # [16, 768, 80]\n",
+    "    box_xyxy        = predictions[:, :, :4]  # [16, 768, 4]\n",
+    "    box_class_scores = predictions[:, :, 4:]  # [16, 768, 80]\n",
     "    \n",
     "    # filter boxes with confidence threshold\n",
     "    box_scores = box_confidences * box_class_probs # [16, 768, 80]\n",
@@ -202,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mexican-extreme",
+   "id": "bound-moral",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "operating-carter",
+   "id": "protective-equity",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -289,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "proprietary-domain",
+   "id": "human-secondary",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -297,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "creative-earthquake",
+   "id": "anticipated-owner",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -305,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "outdoor-frederick",
+   "id": "social-stupid",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -313,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "champion-significance",
+   "id": "regional-brunei",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "protected-equity",
+   "id": "sorted-indonesian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "communist-imperial",
+   "id": "floral-pocket",
    "metadata": {},
    "outputs": [],
    "source": []
