--- a/2_yolov4/y_ious.ipynb
+++ b/2_yolov4/y_ious.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a024cd1c",
+   "id": "adaptive-colonial",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "819ddd52",
+   "id": "superior-leader",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,28 +75,106 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb3e19fd",
+   "id": "permanent-hotel",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def box_iou(boxes):\n",
+    "def box_diou(boxes):\n",
     "    \"\"\"\n",
-    "    Calculate IoU value of 1st box with other boxes of a box array\n",
-    "    \n",
-    "    Args:\n",
+    "    Calculate DIoU value of 1st box with other boxes of a box array\n",
+    "    Reference Paper:\n",
+    "        \"Distance-IoU Loss: Faster and Better Learning for Bounding Box Regression\"\n",
+    "        https://arxiv.org/abs/1911.08287\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
     "    boxes: bbox numpy array, shape=(N, 4), xywh\n",
-    "                   x,y are top left coordinates\n",
-    "                   \n",
-    "    Retures:\n",
-    "    diou: numpy array, shape(N-1,)\n",
-    "                IoU value of boxes[1: ] with boxes[0]\n",
+    "           x,y are top left coordinates\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    diou: numpy array, shape=(N-1,)\n",
+    "         IoU value of boxes[1:] with boxes[0]\n",
     "    \"\"\"\n",
     "    # get box coordinate and area\n",
     "    x = boxes[:, 0]\n",
     "    y = boxes[:, 1]\n",
     "    w = boxes[:, 2]\n",
     "    h = boxes[:, 3]\n",
-    "    areas = w * h"
+    "    areas = w * h\n",
+    "\n",
+    "    # check IoU\n",
+    "    inter_xmin = np.maximum(x[1:], x[0])\n",
+    "    inter_ymin = np.maximum(y[1:], y[0])\n",
+    "    inter_xmax = np.minimum(x[1:] + w[1:], x[0] + w[0])\n",
+    "    inter_ymax = np.minimum(y[1:] + h[1:], y[0] + h[0])\n",
+    "\n",
+    "    inter_w = np.maximum(0.0, inter_xmax - inter_xmin + 1)\n",
+    "    inter_h = np.maximum(0.0, inter_ymax - inter_ymin + 1)\n",
+    "\n",
+    "    inter = inter_w * inter_h\n",
+    "    iou = inter / (areas[1:] + areas[0] - inter)\n",
+    "\n",
+    "    # box center distance\n",
+    "    x_center = x + w/2\n",
+    "    y_center = y + h/2\n",
+    "    center_distance = np.power(x_center[1:] - x_center[0], 2) + np.power(y_center[1:] - y_center[0], 2)\n",
+    "\n",
+    "    # get enclosed area\n",
+    "    enclose_xmin = np.minimum(x[1:], x[0])\n",
+    "    enclose_ymin = np.minimum(y[1:], y[0])\n",
+    "    enclose_xmax = np.maximum(x[1:] + w[1:], x[0] + w[0])\n",
+    "    enclose_ymax = np.maximum(x[1:] + w[1:], x[0] + w[0])\n",
+    "    enclose_w = np.maximum(0.0, enclose_xmax - enclose_xmin + 1)\n",
+    "    enclose_h = np.maximum(0.0, enclose_ymax - enclose_ymin + 1)\n",
+    "    # get enclosed diagonal distance\n",
+    "    enclose_diagonal = np.power(enclose_w, 2) + np.power(enclose_h, 2)\n",
+    "    # calculate DIoU, add epsilon in denominator to avoid dividing by 0\n",
+    "    diou = iou - 1.0 * (center_distance) / (enclose_diagonal + np.finfo(float).eps)\n",
+    "\n",
+    "    return diou"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "funny-biotechnology",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def box_iou(boxes):\n",
+    "    \"\"\"\n",
+    "    Calculate IoU value of 1st box with other boxes of a box array\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    boxes: bbox numpy array, shape=(N, 4), xywh\n",
+    "           x,y are top left coordinates\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    iou: numpy array, shape=(N-1,)\n",
+    "         IoU value of boxes[1:] with boxes[0]\n",
+    "    \"\"\"\n",
+    "    # get box coordinate and area\n",
+    "    x = boxes[:, 0]\n",
+    "    y = boxes[:, 1]\n",
+    "    w = boxes[:, 2]\n",
+    "    h = boxes[:, 3]\n",
+    "    areas = w * h\n",
+    "\n",
+    "    # check IoU\n",
+    "    inter_xmin = np.maximum(x[1:], x[0])\n",
+    "    inter_ymin = np.maximum(y[1:], y[0])\n",
+    "    inter_xmax = np.minimum(x[1:] + w[1:], x[0] + w[0])\n",
+    "    inter_ymax = np.minimum(y[1:] + h[1:], y[0] + h[0])\n",
+    "\n",
+    "    inter_w = np.maximum(0.0, inter_xmax - inter_xmin + 1)\n",
+    "    inter_h = np.maximum(0.0, inter_ymax - inter_ymin + 1)\n",
+    "\n",
+    "    inter = inter_w * inter_h\n",
+    "    iou = inter / (areas[1:] + areas[0] - inter)\n",
+    "    return iou"
    ]
   }
  ],
@@ -116,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
