--- a/nodes/20210409_Yolo v3v4 的继续理解.md
+++ b/nodes/20210409_Yolo v3v4 的继续理解.md
@@ -357,7 +357,91 @@ prob_loss = respond_bbox * tf.nn.sigmoid_cross_entropy_with_logits(labels=label_
     # 这种框一般是gt框附近的框，或者是gt框所在格子的另外两个框。它既不是正例也不是反例不参与置信度loss的计算。（论文里称之为ignore）
 ```
 
-# 1
+# 3、Yolov3 边框预测分析
 
 > https://zhuanlan.zhihu.com/p/49995236
+>
+> https://zhuanlan.zhihu.com/p/345073218
+>
+> https://www.jianshu.com/p/86b8208f634f
 
+## 3.0 如何在训练中使用 先验框 anchor box
+
+Yolo 的做法是不让 bounding box 直接预测实际 box 的宽和高（w, h），而是**利用乘积缩放**将预测的宽和高分别与anchor box绑定。因为如果使用差值作为衡量，那么尺寸大的anchor box相较之下会对偏移量有更大的容忍，而小尺寸会更敏感。不利于训练。
+
+因此绑定关系为
+
+![\begin{aligned} b_{w} & = a_{w}e^{t_{w}} \\ b_{h} & = a_{h}e^{t_{h}} \end{aligned}](https://math.jianshu.com/math?formula=%5Cbegin%7Baligned%7D%20b_%7Bw%7D%20%26%20%3D%20a_%7Bw%7De%5E%7Bt_%7Bw%7D%7D%20%5C%5C%20b_%7Bh%7D%20%26%20%3D%20a_%7Bh%7De%5E%7Bt_%7Bh%7D%7D%20%5Cend%7Baligned%7D)
+
+其中，![a_{w}](https://math.jianshu.com/math?formula=a_%7Bw%7D)和![a_{h}](https://math.jianshu.com/math?formula=a_%7Bh%7D)为anchor box的宽和高，![t_{w}](https://math.jianshu.com/math?formula=t_%7Bw%7D)和![t_{h}](https://math.jianshu.com/math?formula=t_%7Bh%7D)为bounding box直接预测出的宽和高（其实算是比例系数），![b_{w}](https://math.jianshu.com/math?formula=b_%7Bw%7D)和![b_{h}](https://math.jianshu.com/math?formula=b_%7Bh%7D)为转换后预测的实际宽和高，这也就是最终预测中输出的宽和高。
+
+> 所以为什么不直接相乘，用![\begin{aligned} b_{w}=a_{w}*t_{w}, b_{h}=a_{h}*t_{h}\end{aligned}](https://math.jianshu.com/math?formula=%5Cbegin%7Baligned%7D%20b_%7Bw%7D%3Da_%7Bw%7D*t_%7Bw%7D%2C%20b_%7Bh%7D%3Da_%7Bh%7D*t_%7Bh%7D%5Cend%7Baligned%7D) 这样的公式？
+
+相应的，获得最终预测输出的 box 中心坐标：
+
+![\begin{aligned} b_{x} & = \sigma(t_{x}) + c_{x} \\ b_{y} & = \sigma(t_{y}) + c_{y} \end{aligned}](https://math.jianshu.com/math?formula=%5Cbegin%7Baligned%7D%20b_%7Bx%7D%20%26%20%3D%20%5Csigma(t_%7Bx%7D)%20%2B%20c_%7Bx%7D%20%5C%5C%20b_%7By%7D%20%26%20%3D%20%5Csigma(t_%7By%7D)%20%2B%20c_%7By%7D%20%5Cend%7Baligned%7D)
+
+其中，![\sigma(t_{x})](https://math.jianshu.com/math?formula=%5Csigma(t_%7Bx%7D))为sigmoid函数，![c_{x}](https://math.jianshu.com/math?formula=c_%7Bx%7D)和![c_{y}](https://math.jianshu.com/math?formula=c_%7By%7D)分别为grid cell方格左上角点相对整张图片的坐标。作者使用这样的转换公式主要是因为在训练时如果没有将![t_{x}](https://math.jianshu.com/math?formula=t_%7Bx%7D)和![t_{y}](https://math.jianshu.com/math?formula=t_%7By%7D)压缩到(0,1)区间内的话，模型在训练前期很难收敛。
+
+最终可以得出实际输出的box参数公式如下，这个也是在推理时将输出转换为最终推理结果的公式：
+
+![\begin{aligned} b_{x} & = \sigma(t_{x}) + c_{x} \\ b_{y} & = \sigma(t_{y}) + c_{y} \\ b_{w} & = a_{w}e^{t_{w}} \\ b_{h} & = a_{h}e^{t_{h}} \\ \end{aligned}](https://math.jianshu.com/math?formula=%5Cbegin%7Baligned%7D%20b_%7Bx%7D%20%26%20%3D%20%5Csigma(t_%7Bx%7D)%20%2B%20c_%7Bx%7D%20%5C%5C%20b_%7By%7D%20%26%20%3D%20%5Csigma(t_%7By%7D)%20%2B%20c_%7By%7D%20%5C%5C%20b_%7Bw%7D%20%26%20%3D%20a_%7Bw%7De%5E%7Bt_%7Bw%7D%7D%20%5C%5C%20b_%7Bh%7D%20%26%20%3D%20a_%7Bh%7De%5E%7Bt_%7Bh%7D%7D%20%5C%5C%20%5Cend%7Baligned%7D)
+
+> 关于box参数的转换还有一点值得一提，作者在训练中并不是将![t_{x}](https://math.jianshu.com/math?formula=t_%7Bx%7D)、![t_{y}](https://math.jianshu.com/math?formula=t_%7By%7D)、![t_{w}](https://math.jianshu.com/math?formula=t_%7Bw%7D)和![t_{h}](https://math.jianshu.com/math?formula=t_%7Bh%7D)转换为![b_{x}](https://math.jianshu.com/math?formula=b_%7Bx%7D)、![b_{y}](https://math.jianshu.com/math?formula=b_%7By%7D)、![b_{w}](https://math.jianshu.com/math?formula=b_%7Bw%7D)和![b_{h}](https://math.jianshu.com/math?formula=b_%7Bh%7D)后与ground truth box的对应参数求误差，而是使用上述公式的逆运算将ground truth box的参数转换为与![t_{x}](https://math.jianshu.com/math?formula=t_%7Bx%7D)、![t_{y}](https://math.jianshu.com/math?formula=t_%7By%7D)、![t_{w}](https://math.jianshu.com/math?formula=t_%7Bw%7D)和![t_{h}](https://math.jianshu.com/math?formula=t_%7Bh%7D)对应的![g_{x}](https://math.jianshu.com/math?formula=g_%7Bx%7D)、![g_{y}](https://math.jianshu.com/math?formula=g_%7By%7D)、![g_{w}](https://math.jianshu.com/math?formula=g_%7Bw%7D)和![g_{h}](https://math.jianshu.com/math?formula=g_%7Bh%7D)，然后再计算误差，计算中由于sigmoid函数的反函数难计算，所以并没有计算sigmoid的反函数，而是计算输出对应的sigmoid函数值。
+>
+> ![\begin{aligned} \sigma(\hat t_{x}) =g_x - c_{x} \\ \sigma(\hat t_{y}) =g_y - c_{y} \\ \hat t_{w} = \log(g_{w} / a_{w}) \\ \hat t_{h} = \log(g_{h} / a_{h}) \\ \end{aligned}](https://math.jianshu.com/math?formula=%5Cbegin%7Baligned%7D%20%5Csigma(%5Chat%20t_%7Bx%7D)%20%3Dg_x%20-%20c_%7Bx%7D%20%5C%5C%20%5Csigma(%5Chat%20t_%7By%7D)%20%3Dg_y%20-%20c_%7By%7D%20%5C%5C%20%5Chat%20t_%7Bw%7D%20%3D%20%5Clog(g_%7Bw%7D%20%2F%20a_%7Bw%7D)%20%5C%5C%20%5Chat%20t_%7Bh%7D%20%3D%20%5Clog(g_%7Bh%7D%20%2F%20a_%7Bh%7D)%20%5C%5C%20%5Cend%7Baligned%7D)
+>
+> 
+
+## 3.1 公式的解读
+
+论文中边框预测公式如下：
+
+![[公式]](https://www.zhihu.com/equation?tex=b_x%3D%5Csigma+%28t_x%29+%2B+c_x+%5C%5C+b_y%3D%5Csigma+%28t_y%29+%2B+c_y+%5C%5C+b_w%3Dp_we%5E%7Bt_w%7D++%5C%5C+b_h%3Dp_he%5E%7Bt_h%7D+%5C%5C)
+
+其中，Cx, Cy 是 feature map 中 grid cell 的左上角坐标， 在 yolov3 中每个 grid cell 在 Feature map 中的宽和高均为1。
+
+公式中的 Pw, Ph 是通过聚类获得的先验框 anchor box 映射到 feature map 中的宽和高。在coco数据集中，图片尺寸为416\*416，对于13\*13的特征图，其Stride = 416/13=32，因此该特征图对应的先验框  (116 × 90)， (156 × 198)，(373 × 326) ，需要都除以32映射到 feature map 坐标系中。
+
+<img src="https://pic2.zhimg.com/80/v2-758b1df9132a9f4b4e0c7def735e9a11_1440w.jpg" alt="img" style="zoom:60%;" />
+
+最终得到的边框坐标值是bx,by,bw,bh即边界框bbox相对于feature map的位置和大小，是我们需要的预测输出坐标。但**我们网络实际上的学习目标是tx,ty,tw,th这４个offsets**，其中**tx,ty**是预测的坐标偏移值，**tw,th**是尺度缩放，有了这４个offsets，自然可以根据之前的公式去求得真正需要的bx,by,bw,bh４个坐标。
+
+## 3.2 偏移量offset的作用
+
+↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓
+
+**通过学习偏移量，就可以通过网络原始给定的先验框anchor box坐标经过线性回归微调（平移加尺度缩放）去逐渐靠近groundtruth。**
+
+<img src="https://pic4.zhimg.com/80/v2-1229d5cfa3a57f06246eef447d5d32cf_720w.jpg" alt="img" style="zoom:50%;" />
+
+## 3.3 图片尺寸适应输入尺寸
+
+输入尺寸 input_size 为 416\*416，图片尺寸 image_size 为 需要按照纵横比例缩放到 416\*416， **取 min(w/img_w, h/img_h)这个比例来缩放，保证长的边缩放为需要的输入尺寸416，而短边按比例缩放不会扭曲**。
+
+例如：mg_w,img_h是原图尺寸768,576, 缩放后的尺寸为new_w, new_h=416,312，需要的输入尺寸是w,h=416*416.如图2所示：
+
+<img src="https://pic4.zhimg.com/80/v2-62f64986f2a5bf499045e274bcbc782b_720w.jpg" alt="img" style="zoom:47%;" />
+
+## 3.4 推理过程中选择哪个 bounding box
+
+存在一个问题：在训练过程中，我们挑选 bounding box 的准则是选择预测的 box 与 ground truth box 的 IOU最大的 bounding box 作为最优的 box，但是在预测中没有 grounding truth box，怎么才能挑选最优的 bounding box？
+
+这里需要置信度 confidence
+
+置信度是每个bounding box输出的其中一个重要参数，作者对他的作用定义有两重：一重是代表当前box是否有对象的概率![P_{r}(Object)](https://math.jianshu.com/math?formula=P_%7Br%7D(Object))，注意，是对象，不是某个类别的对象，也就是说它用来说明当前box内只是个背景（backgroud）还是有某个物体（对象）；另一重表示当前的box有对象时，它自己预测的box与物体真实的box可能的![IOU_{pred}^{truth}](https://math.jianshu.com/math?formula=IOU_%7Bpred%7D%5E%7Btruth%7D)的值，注意，这里所说的物体真实的box实际是不存在的，这只是模型表达自己框出了物体的自信程度。以上所述，也就不难理解作者为什么将其称之为置信度了，因为不管哪重含义，都表示一种自信程度：框出的box内确实有物体的自信程度和框出的box将整个物体的所有特征都包括进来的自信程度。经过以上的解释，其实我们也就可以用数学形式表示置信度的定义了：
+
+![\begin{aligned} C_{i}^{j} & = P_{r}(Object) * IOU_{pred}^{truth} \end{aligned}](https://math.jianshu.com/math?formula=%5Cbegin%7Baligned%7D%20C_%7Bi%7D%5E%7Bj%7D%20%26%20%3D%20P_%7Br%7D(Object)%20*%20IOU_%7Bpred%7D%5E%7Btruth%7D%20%5Cend%7Baligned%7D)
+
+其中，![C_{i}^{j}](https://math.jianshu.com/math?formula=C_%7Bi%7D%5E%7Bj%7D)表示第i个grid cell的第j个bounding box的置信度。对于如何训练![C_{i}^{j}](https://math.jianshu.com/math?formula=C_%7Bi%7D%5E%7Bj%7D)的方法，在损失函数小节中说明。
+
+## 3.5 条件类别概率（conditional class probalilities）
+
+条件类别概率是一组概率的数组，数组的长度为当前模型检测的类别种类数量，它的意义是当bounding box认为当前box中有对象时，要检测的所有类别中每种类别的概率，其实这个和分类模型最后使用softmax函数输出的一组类别概率是类似的，只是二者存在两点不同：
+
+- YOLO的对象类别概率中没有background一项，也不需要，因为对background的预测已经交给置信度了，所以它的输出是有条件的，那就是在置信度表示当前box有对象的前提下，所以条件概率的数学形式为![P_{r}(class_{i}|Object)](https://math.jianshu.com/math?formula=P_%7Br%7D(class_%7Bi%7D%7CObject))
+- 分类模型中最后输出之前使用softmax求出每个类别的概率，也就是说各个类别之间是互斥的，而YOLOv3算法的每个类别概率是单独用逻辑回归函数(sigmoid函数)计算得出了，所以每个类别不必是互斥的，也就是说一个对象可以被预测出多个类别。
+
+https://zhuanlan.zhihu.com/p/345073218
+
+https://zhuanlan.zhihu.com/p/50595699
