--- a/2_yolov4/d_prediction.ipynb
+++ b/2_yolov4/d_prediction.ipynb
@@ -2,8 +2,96 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "documented-friday",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing Jupyter notebook from a_csp_darknet53.ipynb\n",
+      "importing Jupyter notebook from z_layers.ipynb\n",
+      "importing Jupyter notebook from b_yolov4_neck.ipynb\n",
+      "importing Jupyter notebook from c_yolov4_head_keras.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "import Ipynb_importer\n",
+    "from a_csp_darknet53  import *\n",
+    "from b_yolov4_neck import *\n",
+    "from c_yolov4_head_keras import *"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0cb7ccad",
+   "id": "senior-florence",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def yolo3_postprocess(args,\n",
+    "              anchors,\n",
+    "              num_classes,\n",
+    "              max_boxes=100,\n",
+    "              confidence=0.1,\n",
+    "              iou_threshold=0.4,\n",
+    "              elim_grid_sense=False):\n",
+    "    \"\"\"Postprocess for YOLOv3 model on given input and return filtered boxes.\"\"\"\n",
+    "\n",
+    "    num_layers = len(anchors)//3 # default setting\n",
+    "    yolo_outputs = args[:num_layers]\n",
+    "    image_shape = args[num_layers]\n",
+    "\n",
+    "    if num_layers == 3:\n",
+    "        anchor_mask = [[6,7,8], [3,4,5], [0,1,2]]\n",
+    "        scale_x_y = [1.05, 1.1, 1.2] if elim_grid_sense else [None, None, None]\n",
+    "    else:\n",
+    "        anchor_mask = [[3,4,5], [0,1,2]]\n",
+    "        scale_x_y = [1.05, 1.05] if elim_grid_sense else [None, None]\n",
+    "\n",
+    "    input_shape = K.shape(yolo_outputs[0])[1:3] * 32\n",
+    "\n",
+    "    # print(\"yolo_outputs\",yolo_outputs)\n",
+    "    boxes = []\n",
+    "    box_scores = []\n",
+    "    for l in range(num_layers):\n",
+    "        _boxes, _box_scores = yolo3_boxes_and_scores(yolo_outputs[l],\n",
+    "            anchors[anchor_mask[l]], num_classes, input_shape, image_shape, scale_x_y=scale_x_y[l])\n",
+    "        boxes.append(_boxes)\n",
+    "        box_scores.append(_box_scores)\n",
+    "    boxes = K.concatenate(boxes, axis=0)\n",
+    "    box_scores = K.concatenate(box_scores, axis=0)\n",
+    "\n",
+    "    mask = box_scores >= confidence\n",
+    "    max_boxes_tensor = K.constant(max_boxes, dtype='int32')\n",
+    "    boxes_ = []\n",
+    "    scores_ = []\n",
+    "    classes_ = []\n",
+    "    for c in range(num_classes):\n",
+    "        # TODO: use keras backend instead of tf.\n",
+    "        class_boxes = tf.boolean_mask(boxes, mask[:, c])\n",
+    "        class_box_scores = tf.boolean_mask(box_scores[:, c], mask[:, c])\n",
+    "        nms_index = tf.image.non_max_suppression(\n",
+    "            class_boxes, class_box_scores, max_boxes_tensor, iou_threshold=iou_threshold)\n",
+    "        class_boxes = K.gather(class_boxes, nms_index)\n",
+    "        class_box_scores = K.gather(class_box_scores, nms_index)\n",
+    "        classes = K.ones_like(class_box_scores, 'int32') * c\n",
+    "        boxes_.append(class_boxes)\n",
+    "        scores_.append(class_box_scores)\n",
+    "        classes_.append(classes)\n",
+    "    boxes_ = K.concatenate(boxes_, axis=0)\n",
+    "    scores_ = K.concatenate(scores_, axis=0)\n",
+    "    classes_ = K.concatenate(classes_, axis=0)\n",
+    "\n",
+    "    return boxes_, scores_, classes_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "behavioral-acceptance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +103,7 @@
     "              iou_threshold=0.4,\n",
     "              elim_grid_sense=True):\n",
     "    \n",
-    "    num_layers = len(anchors)//3 # default setting\n",
+    "    num_layers = len(anchors)//3 # 特征图数量\n",
     "    yolo_outputs = args[:num_layers]\n",
     "    image_shape = args[num_layers]\n",
     "    \n",
@@ -39,7 +127,8 @@
     "            anchors[anchor_mask[l]], num_classes, input_shape, image_shape, scale_x_y=scale_x_y[l])\n",
     "        boxes.append(_boxes)\n",
     "        box_scores.append(_box_scores)\n",
-    "        \n",
+    "    \n",
+    "    # 将每个特征图结果进行堆叠\n",
     "    boxes = K.concatenate(boxes, axis=1)\n",
     "    box_scores = K.concatenate(box_scores, axis=1)\n",
     "    \n",
@@ -56,7 +145,10 @@
     "            class_boxes = tf.boolean_mask(boxes[b], mask[b, :, c])\n",
     "            class_box_scores = tf.boolean_mask(box_scores[b, :, c], mask[b, :, c])\n",
     "            nms_index = tf.image.non_max_suppression(\n",
-    "                class_boxes, class_box_scores, max_boxes_tensor, iou_threshold=iou_threshold)\n",
+    "                class_boxes, \n",
+    "                class_box_scores, \n",
+    "                max_boxes_tensor, \n",
+    "                iou_threshold=iou_threshold)\n",
     "            class_boxes = K.gather(class_boxes, nms_index)\n",
     "            class_box_scores = K.gather(class_box_scores, nms_index)\n",
     "            classes = K.ones_like(class_box_scores, 'int32') * c\n",
@@ -90,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "728002a9",
+   "id": "attended-decrease",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -98,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96f955c7",
+   "id": "future-gardening",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "425eb547",
+   "id": "accompanied-collapse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fe3ea64",
+   "id": "sized-worse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
