--- a/2_yolov4/w_loss.ipynb
+++ b/2_yolov4/w_loss.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7016c4b9",
+   "id": "ethical-citation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c243848",
+   "id": "imperial-cocktail",
    "metadata": {},
    "source": [
     "### 1、DIOU_Loss（Distance_IOU_Loss）\n",
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68309c63",
+   "id": "incident-placement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d6cb967",
+   "id": "divided-species",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,6 +251,16 @@
     "                                     conf_thresh=0.0)\n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bound-abortion",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def"
    ]
   }
  ],
@@ -270,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
